--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "@reduxjs/toolkit": "^2.2.1",
     "next": "14.1.0",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
     "sharp": "^0.33.2",
